kubectl/awx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: awx-ingress
  namespace: awx
spec:
  ingressClassName: nginx
  rules:
    - host: DOMAIN-NAME.DOMAIN.COM
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: awx-service
              port:
                number: 80

  tls:
    - hosts:
      - DOMAIN-NAME.DOMAIN.COM
      secretName: ingress-tls-secret
